# HandSim

./: .gitignore  README.md  hand_detection.py  test.py
SDLCubeSim/: CMakeLists.txt
SDLCubeSim/src/: Cube.cpp  Cube.h  Edge.h  Edgge.cpp  RotationControls.cpp  RotationControls.h  SDLManager.h  SDLManagerr.cpp  main.cpp  udpReceiver.cpp  udpReceiver.h
cube simulation/: CMakeLists.txt  glad.c  main.cpp
cube simulation/dependencies/include/glad/: glad.h
hand detection/: hand_detection.py
pyCubeSim/: vizCube.py
